// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots crd/CustomResourceDetails Error Getting CR 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorError MuiTypography-alignCenter"
    >
      Error getting custom resource nonexistentcustomresource: No mock custom resource for you
    </p>
  </div>
</div>
`;

exports[`Storyshots crd/CustomResourceDetails Error Getting CRD 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-colorError MuiTypography-alignCenter"
    >
      Error getting custom resource definition error.crd.io: No mock CRD for you
    </p>
  </div>
</div>
`;

exports[`Storyshots crd/CustomResourceDetails Loading CRD 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root makeStyles-loaderContainer"
  >
    <div
      class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style="width: 40px; height: 40px;"
      title="Loading custom resource details"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots crd/CustomResourceDetails No Error 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <span />
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1"
              style="padding-top: 3px;"
            >
              Back
            </p>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <h1
                class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
              >
                MyCustomResource
              </h1>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    aria-label="Edit"
                    class="MuiButtonBase-root MuiIconButton-root"
                    tabindex="0"
                    title="Edit"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span />
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    aria-label="Delete"
                    class="MuiButtonBase-root MuiIconButton-root"
                    tabindex="0"
                    title="Delete"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span />
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <div />
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              aria-busy="false"
              aria-live="polite"
              class="MuiBox-root MuiBox-root"
            >
              <table
                class="MuiTable-root makeStyles-table"
              >
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataNameCell"
                      role="cell"
                      scope="row"
                    >
                      Name
                    </th>
                    <td
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataCell"
                    >
                      <span
                        class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                      >
                        mycustomresource
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataNameCell"
                      role="cell"
                      scope="row"
                    >
                      Namespace
                    </th>
                    <td
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataCell"
                    >
                      <span
                        class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                      >
                        mynamespace
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataNameCell"
                      role="cell"
                      scope="row"
                    >
                      Creation
                    </th>
                    <td
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataCell"
                    >
                      <span
                        class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                      >
                        12/15/2021, 2:57:13 PM UTC
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataNameCell"
                      role="cell"
                      scope="row"
                    >
                      Test Col
                    </th>
                    <td
                      class="MuiTableCell-root MuiTableCell-body makeStyles-metadataCell"
                    >
                      <p
                        class="MuiTypography-root makeStyles-noWrap MuiTypography-body1"
                        title="My description"
                      >
                        mycustomresource
                        <span />
                      </p>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
  </div>
</div>
`;
